--- a/index2.html
+++ b/index2.html
@@ -13,16 +13,16 @@
       <td>
         <h1>VAIBHAV WADATE</h1>
         <h3>SOFTWARE DEVELOPER AT <a href="https://dynamisch.co/">DYNAMISCH</a></h3>
-        <h3>I am Full Stack Develpoer.Python-IsEveryWhere</h3>
+        <h3>I am Full Stack Develpoer. Python-IsEveryWhere</h3>
       </td>
     </tr>
   </table>
   <hr>
-  <h3>Blog Images</h3>
+  <h3>List of Education</h3>
   <ul>
-    <li>Temple Images</li>
-    <li>Hill Station Images</li>
-    <li>Beach Images</li>
+    <li>S.M.D Bharti School Arni</li>
+    <li>Aney College Yavatamal</li>
+    <li>B.Tech Computer Science Yavatamal</li>
   </ul>
   <hr>
   <h3>My Work Experience</h3>
