--- a/index2.html
+++ b/index2.html
@@ -43,23 +43,29 @@
   <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
-    <tr>
-      <td>Python developer</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Web Develpment</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Django Framework</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Database</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
+    <table cellspacing="10">
+      <tbody>
+        <td>
+          <tr>
+            <td>Python developer</td>
+            <td>⭐⭐⭐⭐⭐</td>
+            <td>Web Develpment</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+        </td>
+      </tbody>
+    </table>
+    <table cellspacing="10">
+      <tbody>
+        <tr>
+          <td>Django Framework</td>
+          <td>⭐⭐⭐⭐⭐</td>
+          <td>Database</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+      </tbody>
+    </table>
+</table>
   <hr>
   <h3><a href="hobbies.html">MY Hobbies</a></h3>
   <h3><a href="Contact.html">Contact Me</a></h3>
